# MiView

./: .gitignore  AGENTS.md  DEBUGLOG.md  License.md  README.md  pyproject.toml  requirements.txt  run.sh  setup.sh
.github/workflows/: ci.yml  release.yml
scripts/: bootstrap_helpers.sh  validate_release_version.py
src/mipview/: __init__.py  main.py  patch_extractor.py  patch_saver.py  patch_selector.py  segmentation_models.py  segmentation_validation.py
src/mipview/io/: __init__.py
src/mipview/segmentation/: __init__.py
src/mipview/state/: __init__.py  app_state.py  cursor_state.py
src/mipview/tools/: patch_utility.py  processing.py  registry.py  volume.py
src/mipview/ui/: __init__.py  contrast_helpers.py  cursor_panel.py  drop_load_choice_dialog.py  main_window.py  patch_history_panel.py  patch_window.py  tool_actions.py  tools_menu.py  viewer_area.py  window_styling.py
src/mipview/viewer/: __init__.py  intensity.py  oriented_volume.py  slice_viewer_widget.py  triplanar_viewer_widget.py
src/miview/: __init__.py  main.py  patch_extractor.py  patch_history.py  patch_saver.py  segmentation_models.py  segmentation_validation.py
src/miview/io/: __init__.py  nifti_loader.py
src/miview/patch/: __init__.py  saver.py  (+2 more)
tests/: test_contrast_state.py  test_cursor_state.py  test_drop_loading.py  test_nifti_loader.py  test_oriented_volume.py  test_patch_extractor.py  test_patch_history.py  test_patch_saver.py  test_patch_selector.py  test_segmentation_validation.py  test_slice_geometry.py  test_tools_processing.py  test_viewer_intensity.py  test_zoom_state.py
(+30 files in other folders)
