[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mipview"
version = "0.1.3"
description = "A lightweight Linux-first NIfTI viewer for patch-based inspection workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Marshall Xu" }
]
dependencies = [
  "PySide6>=6.6",
  "nibabel>=5.2",
  "numpy>=1.26",
  "scikit-image>=0.23"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
mipview = "mipview.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
